--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
         "concurrently": "^3.5.1",
         "cross-env": "^5.1.4",
         "css-loader": "^0.28.11",
+        "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.8.3",
         "sass-loader": "^7.0.1",
         "style-loader": "^0.21.0",
+        "url-loader": "^1.0.1",
         "vue": "^2.5.16",
         "vue-loader": "^14.2.2",
         "vue-router": "^3.0.1",
